--- a/client/src/assets/scss/global.scss
+++ b/client/src/assets/scss/global.scss
@@ -3,50 +3,60 @@
   Global Tag CSS
 ------------------------------------------------ */
 
+html,
+body {
+  height: 100%;
+}
+
 // Common Body
 body {
-    background: $bg-color;
-    font-family: 'Avenir', Helvetica, Arial, sans-serif;
+  background: $bg-color;
+  font-family: "Avenir", Helvetica, Arial, sans-serif;
+}
+
+main#hunseol {
+  min-height: calc(100vh - 18.5rem);
 }
 
 a {
-    color: $active-color;
-    &:active {
-        color: $active-color-hover;
-    }
+  color: $active-color;
+  &:active {
+    color: $active-color-hover;
+  }
 }
 
 // Button Css
 button {
-    cursor: pointer;
-    display: inline-block;
-    font-weight: 400;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    user-select: none;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: 0.25rem;
-    transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 textarea.auto-size {
-    width: 100%;
-    height: 100%;
-    overflow: scroll;
-    min-height: 300px;
-    box-sizing: border-box;
-    line-height: 1.5;
-    padding: 15px 15px;
-    border-radius: 3px;
-    transition: box-shadow 0.5s ease;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  min-height: 300px;
+  box-sizing: border-box;
+  line-height: 1.5;
+  padding: 15px 15px;
+  border-radius: 3px;
+  transition: box-shadow 0.5s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 /* ------------------------
@@ -54,9 +64,9 @@ textarea.auto-size {
 ------------------------ */
 
 #app {
-    font-family: $font-main-1;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  font-family: $font-main-1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /* ------------------------------------------------------------------------
@@ -69,12 +79,12 @@ textarea.auto-size {
 
 $h-size: h !default;
 @for $i from 1 through 6 {
-    #{$h-size}#{$i} {
-        font-weight: 600;
-        font-size: 10px + (30 / $i);
-        padding: 15px 0px;
-        word-break: break-word;
-    }
+  #{$h-size}#{$i} {
+    font-weight: 600;
+    font-size: 10px + (30 / $i);
+    padding: 15px 0px;
+    word-break: break-word;
+  }
 }
 
 /* ----------------------------------------
@@ -87,44 +97,44 @@ $h-size: h !default;
 ------------------------------------------------ */
 
 @each $color in $colors {
-    $key: nth($color, 1);
-    $value: nth($color, 2);
-    .#{'btn-'}#{$key} {
-        color: $white;
-        background-color: $value;
-        &:hover {
-            background: darken($value, 5%);
-            font-weight: bold;
-        }
-        &:active {
-            background-color: darken($white, 30%);
-        }
-        &:disabled {
-            cursor: not-allowed;
-            background: #dddddd;
-        }
+  $key: nth($color, 1);
+  $value: nth($color, 2);
+  .#{"btn-"}#{$key} {
+    color: $white;
+    background-color: $value;
+    &:hover {
+      background: darken($value, 5%);
+      font-weight: bold;
     }
-    .#{'btn-edge-'}#{$key} {
-        border-color: $value;
-        color: $value;
-        background-color: $white;
-        &:hover {
-            background: darken($value, 5%);
-            color: darken($white, 5%);
-            font-weight: 800;
-        }
-        &:active {
-            background-color: darken($white, 30%);
-        }
-        &:disabled {
-            cursor: not-allowed;
-            background: #dddddd;
-        }
+    &:active {
+      background-color: darken($white, 30%);
     }
-    .#{'background-'}#{$key} {
-        color: $white;
-        background: $value;
+    &:disabled {
+      cursor: not-allowed;
+      background: #dddddd;
     }
+  }
+  .#{"btn-edge-"}#{$key} {
+    border-color: $value;
+    color: $value;
+    background-color: $white;
+    &:hover {
+      background: darken($value, 5%);
+      color: darken($white, 5%);
+      font-weight: 800;
+    }
+    &:active {
+      background-color: darken($white, 30%);
+    }
+    &:disabled {
+      cursor: not-allowed;
+      background: #dddddd;
+    }
+  }
+  .#{"background-"}#{$key} {
+    color: $white;
+    background: $value;
+  }
 }
 
 /* ------------------------------------------------
@@ -136,16 +146,16 @@ $h-size: h !default;
 ------------------*/
 
 .router-link-exact-active {
-    font-weight: 700;
-    color: $light-white;
+  font-weight: 700;
+  color: $light-white;
 }
 
 .router-item {
-    cursor: pointer;
+  cursor: pointer;
+  text-decoration: none;
+  &:hover {
     text-decoration: none;
-    &:hover {
-        text-decoration: none;
-    }
+  }
 }
 
 /* ------------------------
@@ -153,15 +163,15 @@ $h-size: h !default;
 ------------------------ */
 
 .text-right {
-    text-align: right;
+  text-align: right;
 }
 
 .text-left {
-    text-align: left;
+  text-align: left;
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 /* ------------------------
@@ -171,9 +181,9 @@ $h-size: h !default;
 
 $width-class: width- !default;
 @for $i from 1 through 20 {
-    .#{$width-class}#{$i * 5} {
-        width: 0% + ($i * 5);
-    }
+  .#{$width-class}#{$i * 5} {
+    width: 0% + ($i * 5);
+  }
 }
 
 /* ------------------------
@@ -183,31 +193,30 @@ $width-class: width- !default;
 
 $height: height- !default;
 @for $i from 1 through 20 {
-    .#{$height}#{$i * 50} {
-        height: 0px + ($i * 50);
-        word-break: keep-all;
-    }
+  .#{$height}#{$i * 50} {
+    height: 0px + ($i * 50);
+    word-break: keep-all;
+  }
 }
 
 $max-height: max-height- !default;
 @for $i from 1 through 20 {
-    .#{$max-height}#{$i*50} {
-        max-height: 0px + ($i * 50);
-        word-break: keep-all;
-        min-height: 0px + ($i * 10);
-        ;
-        height: auto;
-    }
+  .#{$max-height}#{$i*50} {
+    max-height: 0px + ($i * 50);
+    word-break: keep-all;
+    min-height: 0px + ($i * 10);
+    height: auto;
+  }
 }
 
 $min-height: min-height- !default;
 @for $i from 1 through 20 {
-    .#{$min-height}#{$i*50} {
-        min-height: 0px + ($i * 50);
-        word-break: keep-all;
-        height: auto;
-        overflow-y: auto;
-    }
+  .#{$min-height}#{$i*50} {
+    min-height: 0px + ($i * 50);
+    word-break: keep-all;
+    height: auto;
+    overflow-y: auto;
+  }
 }
 
 /* ------------------------
@@ -218,16 +227,16 @@ $min-height: min-height- !default;
 
 $font-size: font-size- !default;
 @for $i from 10 through 100 {
-    .#{$font-size}#{$i} {
-        font-size: 0px + ($i);
-    }
+  .#{$font-size}#{$i} {
+    font-size: 0px + ($i);
+  }
 }
 
 $font-weight: font-weight- !default;
 @for $i from 1 through 10 {
-    .#{$font-weight}#{$i} {
-        font-weight: 100 * ($i);
-    }
+  .#{$font-weight}#{$i} {
+    font-weight: 100 * ($i);
+  }
 }
 
 /* ------------------------
@@ -236,37 +245,37 @@ $font-weight: font-weight- !default;
 
 $padding: padding- !default;
 @for $i from 1 through 6 {
-    .#{$padding}#{$i*10} {
-        padding: (10px * $i);
-    }
+  .#{$padding}#{$i*10} {
+    padding: (10px * $i);
+  }
 }
 
 $padding-top: padding-top- !default;
 @for $i from 1 through 20 {
-    .#{$padding-top}#{$i*10} {
-        padding-top: (5px * $i) 0px 0px 0px;
-    }
+  .#{$padding-top}#{$i*10} {
+    padding-top: (5px * $i) 0px 0px 0px;
+  }
 }
 
 $padding-bottom: padding-bottom- !default;
 @for $i from 1 through 20 {
-    .#{$padding-bottom}#{$i*10} {
-        padding-bottom: 0px 0px (5px * $i) 0px;
-    }
+  .#{$padding-bottom}#{$i*10} {
+    padding-bottom: 0px 0px (5px * $i) 0px;
+  }
 }
 
 $padding-right: padding-right- !default;
 @for $i from 1 through 20 {
-    .#{$padding-right}#{$i*10} {
-        padding-right: 0px 0px (5px * $i) 0px;
-    }
+  .#{$padding-right}#{$i*10} {
+    padding-right: 0px 0px (5px * $i) 0px;
+  }
 }
 
 $padding-left: padding-left- !default;
 @for $i from 1 through 20 {
-    .#{$padding-left}#{$i*10} {
-        padding-left: 0px 0px (5px * $i) 0px;
-    }
+  .#{$padding-left}#{$i*10} {
+    padding-left: 0px 0px (5px * $i) 0px;
+  }
 }
 
 /* ------------------------
@@ -275,37 +284,37 @@ $padding-left: padding-left- !default;
 
 $margin: margin- !default;
 @for $i from 1 through 20 {
-    .#{$margin}#{$i * 5} {
-        margin: (5px * $i);
-    }
+  .#{$margin}#{$i * 5} {
+    margin: (5px * $i);
+  }
 }
 
 $margin-top: margin-top- !default;
 @for $i from 1 through 20 {
-    .#{$margin-top}#{$i * 5} {
-        margin-top: (5px * $i);
-    }
+  .#{$margin-top}#{$i * 5} {
+    margin-top: (5px * $i);
+  }
 }
 
 $margin-bottom: margin-bottom- !default;
 @for $i from 1 through 20 {
-    .#{$margin-bottom}#{$i * 5} {
-        margin-bottom: (5px * $i)
-    }
+  .#{$margin-bottom}#{$i * 5} {
+    margin-bottom: (5px * $i);
+  }
 }
 
 $margin-right: margin-right- !default;
 @for $i from 1 through 20 {
-    .#{$margin-right}#{$i * 5} {
-        margin-right: (5px * $i);
-    }
+  .#{$margin-right}#{$i * 5} {
+    margin-right: (5px * $i);
+  }
 }
 
 $margin-left: margin-left- !default;
 @for $i from 1 through 20 {
-    .#{$margin-left}#{$i * 5} {
-        margin-left: (5px * $i);
-    }
+  .#{$margin-left}#{$i * 5} {
+    margin-left: (5px * $i);
+  }
 }
 
 /* ------------------------
@@ -314,11 +323,11 @@ $margin-left: margin-left- !default;
 
 $label-title: label-title- !default;
 @for $i from 12 through 30 {
-    .#{$label-title}#{$i} {
-        font-size: 1px * $i;
-        font-weight: 600;
-        word-break: break-word;
-    }
+  .#{$label-title}#{$i} {
+    font-size: 1px * $i;
+    font-weight: 600;
+    word-break: break-word;
+  }
 }
 
 /* ------------------------
@@ -327,12 +336,24 @@ $label-title: label-title- !default;
 
 $shadow-box: shadow-box- !default;
 @for $i from 1 through 10 {
-    .#{$shadow-box}#{$i} {
-      -webkit-box-shadow: 0 (15px + $i) (20px + $i) (-10px - $i) $gray; /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-      -moz-box-shadow: 0 (15px + $i) (20px + $i) (-10px - $i) $gray;/* Firefox 3.5 - 3.6 */
-      box-shadow: 0 (15px + $i) (20px + $i) (-10px - $i) $gray; /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
-      padding: 20px;
-    }
+  .#{$shadow-box}#{$i} {
+    -webkit-box-shadow: 0
+      (15px + $i)
+      (20px + $i)
+      (-10px - $i)
+      $gray; /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+    -moz-box-shadow: 0
+      (15px + $i)
+      (20px + $i)
+      (-10px - $i)
+      $gray; /* Firefox 3.5 - 3.6 */
+    box-shadow: 0
+      (15px + $i)
+      (20px + $i)
+      (-10px - $i)
+      $gray; /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+    padding: 20px;
+  }
 }
 
 /* ------------------------
@@ -340,5 +361,5 @@ $shadow-box: shadow-box- !default;
 ------------------------ */
 
 .table-hover tr:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
